取りあえずしゃべって、リンクを開くバージョン。

--- a/App.config
+++ b/App.config
@@ -19,6 +19,12 @@
             <setting name="GridRowWidthB" serializeAs="String">
                 <value>198</value>
             </setting>
+            <setting name="waitTiming" serializeAs="String">
+                <value>500</value>
+            </setting>
+            <setting name="OpenLink" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SyncRoomChatToolV2.Properties.Settings>
     </userSettings>
 </configuration>
