--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="GridRowWidthB" Type="System.Double" Scope="User">
       <Value Profile="(Default)">198</Value>
     </Setting>
+    <Setting Name="waitTiming" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">500</Value>
+    </Setting>
+    <Setting Name="OpenLink" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
