--- a/SyncRoomChatToolV2.csproj
+++ b/SyncRoomChatToolV2.csproj
@@ -11,12 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="UIAutomationLib.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="System.Speech" Version="8.0.0" />
+    <PackageReference Include="VirtualizingWrapPanel" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
