--- a/App.config
+++ b/App.config
@@ -19,11 +19,38 @@
             <setting name="GridRowWidthB" serializeAs="String">
                 <value>198</value>
             </setting>
-            <setting name="waitTiming" serializeAs="String">
-                <value>500</value>
+            <setting name="WaitValue" serializeAs="String">
+                <value>200</value>
             </setting>
             <setting name="OpenLink" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="LinkWaveFilePath" serializeAs="String">
+                <value>./link.wav</value>
+            </setting>
+            <setting name="CanSpeech" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UseVoiceVox" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="VoiceVoxPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="VoiceVoxAddress" serializeAs="String">
+                <value>http://127.0.0.1:50021</value>
+            </setting>
+            <setting name="CutLength" serializeAs="String">
+                <value>40</value>
+            </setting>
+            <setting name="WindowTopMost" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Volume" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="AccessToken" serializeAs="String">
+                <value />
             </setting>
         </SyncRoomChatToolV2.Properties.Settings>
     </userSettings>
