--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "SyncRoomChatToolV2": {
-      "commandName": "Project",
-      "commandLineArgs": "/demo"
+      "commandName": "Project"
     }
   }
 }
