--- a/App.config
+++ b/App.config
@@ -52,6 +52,9 @@
             <setting name="AccessToken" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SpeechWhenInvited" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SyncRoomChatToolV2.Properties.Settings>
     </userSettings>
 </configuration>
