--- a/SyncRoomChatToolV2.csproj
+++ b/SyncRoomChatToolV2.csproj
@@ -9,7 +9,7 @@
     <UseWPF>True</UseWPF>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>SyncRoomChatToolV2.ico</ApplicationIcon>
-    <FileVersion>0.0.2.7</FileVersion>
+    <FileVersion>0.0.2.8</FileVersion>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
@@ -18,14 +18,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
-    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+    <PackageReference Include="MaterialDesignColors" Version="3.1.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.1.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="NAudio.Midi" Version="2.2.1" />
     <PackageReference Include="NAudio.WinForms" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Speech" Version="8.0.0" />
-    <PackageReference Include="VirtualizingWrapPanel" Version="2.0.6" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
+    <PackageReference Include="System.Speech" Version="9.0.0" />
+    <PackageReference Include="VirtualizingWrapPanel" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
